[package]
name = "sample"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
futures = "0.3"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
strip = true
